--- a/app/src/main/res/layout/content_homework4.xml
+++ b/app/src/main/res/layout/content_homework4.xml
@@ -49,15 +49,15 @@
             app:layout_constraintTop_toBottomOf="@+id/pg1"/>
 
 
-    <!--<Button
+    <Button
             android:id="@+id/button_hw4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="Goto homework4"
+            android:text="Goto homework5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent" />-->
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
